# obs-voicemeeter

./: CMakeLists.txt  circle-buffer.h  obs-voicemeeter.cpp
data/locale/: en-US.ini
